[package]
name = "cargo-aged"
version = "0.1.0"
edition = "2021"
description = "Cargo subcommand that updates dependencies only when their latest stable version has aged past a configurable threshold."
license = "MIT OR Apache-2.0"

[[bin]]
name = "cargo-aged"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
